# XYZRobot_Arduino

./: --conanfile.txt  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.py  configure.sh  profile.txt
.github/workflows/: build.sh  install.sh  main.yml
MainProjects/A1_16_ID_Setting_v1.0/: A1_16_ID_Setting_v1.0.ino  Check_Mask.h
MainProjects/Bolide/: ActionsEngine.cpp  ActionsEngine.h  ActionsEngineProtocol.h  AnalogJoystick.cpp  AnalogJoystick.h  BOLIDE_Y-01_Board.h  Bolide.ino  BolideJoystick.cpp  BolideJoystick.h  CMakeLists.txt  Config.h  LEDTasks.cpp  LEDTasks.h  LEDTasksProtocol.h  MotionEditor.cpp  OnBoardButtons.cpp  OnBoardButtons.h  Robot.cpp  Robot.h  Y-01_USER_MOTION.h  libraries
MainProjects/Bolide/cmake/Platform/: Arduino.cmake
MainProjects/Bolide_Y-01/: BOLIDE.h  BOLIDE_Y-01_Board.h  Bolide_Y-01.ino  CMakeLists.txt  USER_MOTION.h  Y-01_Mask_Definition.h  Y-01_USER_MOTION.h  main.cpp
MainProjects/Bolide_Y-01_Default_v1.1/: BOLIDE.h  Bolide_Y-01_Default_v1.1.ino
MainProjects/Bolide_Y-01_UserMotion_v1.0/: BOLIDE.h  Bolide_Y-01_UserMotion_v1.0.ino  USER_MOTION.h
MainProjects/RobotEditor/: CMakeLists.txt  RobotEditor.ino
MainProjects/ServoIdSetting/: CMakeLists.txt  ServoIdSetting.ino
MainProjects/XYZrobot_Editor_Driver_v1.0/: XYZrobot_Editor_Driver_v1.0.ino
XYZSharedProjects/hardware/XYZrobot/: boards.txt
XYZSharedProjects/hardware/XYZrobot/1.0/bootloaders/atmega1280/: ATmegaBOOT_168_XYZ.c
XYZSharedProjects/hardware/XYZrobot/1.6/avr/: boards.txt
XYZSharedProjects/hardware/XYZrobot/Current/: XYZrobot
XYZSharedProjects/hardware/XYZrobot/avr/: boards.txt
XYZSharedProjects/hardware/XYZrobot/bootloaders/atmega1280/: ATmegaBOOT_168_XYZ_atmega1280.hex
XYZSharedProjects/libraries/BOLIDE_Player/: A1-16.cpp  A1-16.h  BOLIDE_Player  BOLIDE_Player.cpp  BOLIDE_Player.h  CMakeLists.txt
cmake/: ArduinoToolchain.cmake
cmake/Platform/: Arduino.cmake
hardware/XYZrobot/: boards_old.txt  platform.txt
hardware/XYZrobot/1.6/avr/: boards.txt
hardware/XYZrobot/cores/XYZrobot1280/: new.cpp  new.h
libraries/BOLIDE_Player/: A1-16.cpp  A1-16.h  ArduinoHardwareSerial.h  ArduinoProgramMemory.cpp  ArduinoProgramMemory.h  BOLIDE_Player.cpp  BOLIDE_Player.h  CMakeLists.txt  ProgramMemoryProtocol.h  SerialProtocol.h
libraries/HAL/: CMakeLists.txt  HAL.h  ProgramMemoryProtocol.h  SerialProtocol.h  TimeServices.h
libraries/HALArduino/: ArduinoHardwareSerial.cpp  ArduinoHardwareSerial.h  ArduinoProgramMemory.cpp  ArduinoProgramMemory.h  ArduinoTimeServices.cpp  ArduinoTimeServices.h  HALArduino.h
libraries/arduino-uClibcpp/: ostream
libraries/uClibcpp/: .gitignore  .gitrepo  new_op.cpp
libraries/uClibcpp/examples/serstream/: serstream.ino
libraries/uClibcpp/examples/string_vector/: string_vector.ino
scripts/: build.sh  configure.sh  install_shared_libs.sh
scripts/subrepo/: .gitrepo
src/Bolide/: ActionsEngine.h  ActionsEngineProtocol.h  Bolide.ino  CMakeLists.txt  CRAWLER_USER_MOTION.h  Config.h  LEDTasks.cpp  LEDTasks.h  LEDTasksProtocol.h  MotionEditor.cpp  MotionEditor.h  OnBoardButtons.cpp  OnBoardButtons.h  Robot.h  ScopedLEDTask.cpp  ScopedLEDTask.h  Y-01_Board.h  Y-01_Mask_Definition.h  Y-01_USER_MOTION.h
src/Bolide/Joystick/: AnalogJoystick.h  JoystickAnalogStickProtocol.h  JoystickProtocol.h  XYZJoystick.cpp  XYZJoystick.h
src/RobotEditor/: CMakeLists.txt  RobotEditor.ino  mask_definition.h
src/ServoIdSetting/: CMakeLists.txt  ServoIdSetting.ino
